<resources>
    <string name="app_name">CST2335-FinalProject</string>
    <string name="bear_new_image_button">Generate</string>
    <string name="bear_new_image_height">Height</string>
    <string name="bear_new_image_width">Width</string>
    <string name="bear_image_text">Name of the image</string>
    <string name="bear_image_date">Date of the image</string>
    <string name="bear_image_description">Bear Image Entry</string>
    <string name="bear_details_date">Date added</string>
    <string name="bear_details_sizes">Size</string>
    <string name="bear_details_description">Size</string>


    <string name="buttonName1">Convert</string>
    <string name="buttonName2">HELP</string>

    <string name="helpMessage">"Instructions on how to use the interface:\n\n"
                    "1. Enter the amount in the \"Amount\" field.\n"
                    "2. Select the source currency from the \"From\" dropdown.\n"
                    "3. Select the target currency from the \"To\" dropdown.\n"
                    "4. Click the \"Convert\" button to perform the conversion.\n"
                    "5. The converted amount will be displayed in the list below.\n"
                    "6. Long press on an item in the list to delete it.\n\n"
                    "Note: Currency conversion rates are obtained from a third-party API and may not always be up to date."</string>

    <string-array name="currency_codes">
        <item>AUD</item>
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>

    <string-array name="currency_names">
        <item>Australian Dollar</item>
        <item>Canadian Dollar</item>
        <item>US Dollar</item>
        <item>Europe Euro</item>
    </string-array>

    <string name="enter_airport_code">Enter Airport Code</string>
    <string name="destination">Destination:%s</string>
    <string name="terminal">Terminal:%s</string>
    <string name="gate">Gate:%s</string>
    <string name="delay">Delay:%s</string>
    <string name="departure">Departure:%s</string>
    <string name="flight_name">Flight Name:%s</string>
    <string name="flight_number">Flight Number:%s</string>
    <string name="search">Search</string>
    <string name="view_saved_flights">View saved flights</string>
    <string name="departureLabel">Departure:</string>
    <string name="flight_number_label">Flight number:</string>
    <string name="destinationLabel">Destination:</string>
    <string name="terminalLabel">Terminal:</string>
    <string name="gateLabel">Gate:</string>
    <string name="delayLabel">Delay:</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="flight_detail">Flight Details</string>
    <string name="flight_help">
                    "1. Enter the airport code in the text field and click 'Search'.\n"
                    "2. The app will fetch flight lists for the entered airport code.\n"
                    "3. Click one of the list to view its details with a save button.\n"
                    "4. If you click on a saved flight, you will have the option to delete it.\n"
                    "5. To view the list of saved flights, click 'View Saved Flights'.\n"
                    "Note: Getting List from Flight API could take longer than expected."</string>


    <string name="trivia_welcome_text">Welcome to the Trivia App!</string>
    <string name="trivia_username">Enter your Username</string>
    <string name="trivia_start">Start Trivia</string>
    <string name="trivia_high_score">Leaderboards</string>
    <string name="trivia_answer_submit">Submit Answer</string>
    <string name="trivia_help">Help</string>
    <string name="trivia_usage">How to use</string>
    <string name="trivia_info">- Press Start Trivia to begin the Trivia.
                            \n\n- Tap on Leaderboards to view the top 10 scores.
                             \n\n- Read the questionnaires and try to guess the answer. \n\n- Have fun!</string>
    <string name="trivia_select_answer">Please select an answer!</string>
    <string name="trivia_okay">OK</string>
    <string name="trivia_score_saved">Score saved!</string>
    <string name="trivia_question_numbers">Number of questions</string>
    <string name="trivia_category_geography">Geography</string>
    <string name="trivia_category_history">History</string>
    <string name="trivia_category_sport">Sport</string>
    <string name="trivia_category_art">Art</string>

</resources>
