<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ticket"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Flight details:  -->

        <TextView
            android:id="@+id/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/departureAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="name of the airport"
            app:layout_constraintStart_toEndOf="@+id/departure"
            app:layout_constraintTop_toTopOf="@+id/departure" />

        <TextView
            android:id="@+id/flightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/departureAirport" />

        <TextView
            android:id="@+id/flightName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="flight name goes here"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/flightLabel"
            app:layout_constraintTop_toTopOf="@+id/flightLabel" />

        <TextView
            android:id="@+id/flightNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/flightLabel"
            app:layout_constraintTop_toBottomOf="@+id/flightName" />

        <TextView
            android:id="@+id/flightNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Flight Number here"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/flightNumberLabel"
            app:layout_constraintTop_toTopOf="@+id/flightNumberLabel" />

        <TextView
            android:id="@+id/destinationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/flightNumberLabel"
            app:layout_constraintTop_toBottomOf="@+id/flightNumber" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="destination info here"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/destinationLabel"
            app:layout_constraintTop_toTopOf="@+id/destinationLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
